# bag2seq

./: CMakeLists.txt  package.xml
config/: params.yaml
src/: bag_to_seq.cpp  bag_to_seq_node.cpp  bag_to_seq_node.hpp  bag_to_seq_pubsub.cpp  capture_gui.cpp  capture_gui.hpp
